--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="refresh" content="60">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Tempo com Amor</title>
 </head>
 <body>
     <div class="box">
